# coding-theorem

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  publish.yml
src/coding_theorem/: __init__.py  __main__.py  cli.py  config.py  installer.py
tests/: conftest.py  test_cli.py  test_installer.py  test_platforms.py
