[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coding-theorem"
version = "0.1.1"
description = "Installs the Theseus MCP server into local coding tools"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Travis Gilbert", email = "1travisgilbert@gmail.com" },
]
keywords = [
    "mcp",
    "model-context-protocol",
    "claude-code",
    "theseus",
    "knowledge-graph",
    "coding-assistant",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1",
    "platformdirs>=4.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "build>=1.2",
]

[project.scripts]
coding-theorem = "coding_theorem.cli:main"

[project.urls]
Homepage = "https://github.com/Travis-Gilbert/coding-theorem"
Documentation = "https://github.com/Travis-Gilbert/coding-theorem#readme"
Issues = "https://github.com/Travis-Gilbert/coding-theorem/issues"
Changelog = "https://github.com/Travis-Gilbert/coding-theorem/blob/main/CHANGELOG.md"
Source = "https://github.com/Travis-Gilbert/coding-theorem"

[tool.hatch.build.targets.wheel]
packages = ["src/coding_theorem"]

[tool.hatch.build.targets.sdist]
include = [
    "src/coding_theorem",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "RUF",  # ruff-specific
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B018"]  # useless expression (common in tests)

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]

[tool.coverage.run]
source = ["src/coding_theorem"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
